src/test/resources/purescript_examples/failing/NewtypeInstance5.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith InvalidNewtypeInstance\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSNewTypeDeclarationImpl(NewtypeDeclaration)
        PsiElement(newtype)('newtype')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('X')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          PSGenericIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('X')
            PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(derive)('derive')
        PsiElement(whitespace)(' ')
        PsiElement(newtype)('newtype')
        PsiElement(whitespace)(' ')
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSGenericIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('functorX')
          PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Functor')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('X')
                PsiElement(whitespace)('\n')
